Geometrynodes: Captialized T for 'Mesh to Volume' and 'Align Euler to Vector' in Add-menu #99835

Closed
opened 2022-07-19 11:41:04 +02:00 by D0ppelgaenger · 11 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-18 22:26, hash: 135e530356
Worked: -

Short description of error
T in "to" of the 'Mesh to Volume' and 'Align Euler to Vector' nodes is capitalized in the add-menu.
It is not capitalized in the actual name of the node, once you add them. Nor is it capitalized for any other "to's" in the other nodes.
MeshToVolumeAdd.png AlignEulerToVectorAdd.png Nodes.png

Exact steps for others to reproduce the error
Add Geometry nodes modifier
Open add-menu
→ Mesh → 'Mesh to Volume'
or
→Utilities → 'Align Euler to Vector'
Name/capitalization in menu does not match name of added node, nor style of other nodes

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-18 22:26, hash: `135e530356` Worked: - **Short description of error** **T** in "to" of the 'Mesh to Volume' and 'Align Euler to Vector' nodes is capitalized in the add-menu. It is not capitalized in the actual name of the node, once you add them. Nor is it capitalized for any other "to's" in the other nodes. ![MeshToVolumeAdd.png](https://archive.blender.org/developer/F13300005/MeshToVolumeAdd.png) ![AlignEulerToVectorAdd.png](https://archive.blender.org/developer/F13300004/AlignEulerToVectorAdd.png) ![Nodes.png](https://archive.blender.org/developer/F13300003/Nodes.png) **Exact steps for others to reproduce the error** Add Geometry nodes modifier Open add-menu → Mesh → 'Mesh to Volume' or →Utilities → 'Align Euler to Vector' Name/capitalization in menu does not match name of added node, nor style of other nodes
Author

Added subscriber: @Leo-Luther

Added subscriber: @Leo-Luther
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Not sure if such things are handled as bugs, but I guess it can be considered a paper-cut.

Not sure if such things are handled as bugs, but I guess it can be considered a paper-cut.

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Yes, indeed, these are missed things.

Yes, indeed, these are missed things.
Author

Wasn't quite sure whether it should be considered as bug either, but didn't quite know where else to put it.
Reported it just in case

Wasn't quite sure whether it should be considered as bug either, but didn't quite know where else to put it. Reported it just in case

This issue was referenced by 35843ddcd8

This issue was referenced by 35843ddcd80e5957656b157650da950f228d2808
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-07-22 18:37:12 +02:00
Member

Thanks for reporting this!

Thanks for reporting this!
Author

You're welcome.
It's the least I can do. Even though in this case it is only a small paper-cut

You're welcome. It's the least I can do. Even though in this case it is only a small paper-cut
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99835
No description provided.