Fix T99835: Incorrect title case for two node names